apps/base/harbor/controllers/apigateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: harbor
  labels:
    app: harbor
    release: harbor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-https
  hostnames:
    - harbor.benwoodward.cloud
  rules:
    - matches:
        - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: harbor
          port: 80
          kind: Service
