apps/base/harbor/controllers/httproute.yaml
---
# Adapted from https://github.com/goharbor/harbor-helm/blob/main/templates/ingress/ingress.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-portal
  namespace: harbor
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - harbor.benwoodward.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /service
        - path:
            type: PathPrefix
            value: /v2
        - path:
            type: PathPrefix
            value: /c
      backendRefs:
        - name: harbor-portal
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor-portal
          port: 80
